tf/instance.tf
resource "aws_instance" "instance" {
  ami                         = "ami-0ba311fb4d24e43b1"
  source_dest_check           = false
  instance_type               = "t2.medium"
  subnet_id                   = "${aws_subnet.subnet.id}"
  associate_public_ip_address = true
  vpc_security_group_ids      = ["${aws_security_group.sg.id}"]

  tags {
    Name = "kong"
  }
}
